TEST_PROGRAMS/INVALID/04/19.go
package main

func main() {
    //Illegal character in interpreted string
    var x = "a"a"
    x++ // "use" x
}
